clang/test/BSC/Negative/InitAnalysis/init-return-value.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test: return value must be initialized in _Safe functions.

_Safe int test_return_uninit(int cond) {
    int x;
    if (cond)
        x = 42;
    return x; // expected-error {{use of possibly uninitialized value: `x`}}
}

_Safe int test_return_never_init(void) {
    int x;
    return x; // expected-error {{use of uninitialized value: `x`}}
}
